syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "workflow_template.proto";

service WorkflowService {
    // Creates a Workflow
    rpc CreateWorkflow (CreateWorkflowRequest) returns (Workflow) {
        option (google.api.http) = {
            post: "/apis/v1beta1/{namespace}/workflows"
            body: "workflow"
        };
    }

    rpc CreateWorkflowTemplate (CreateWorkflowTemplateRequest) returns (WorkflowTemplate) {
        option (google.api.http) = {
            post: "/apis/v1beta1/{namespace}/workflow_templates"
            body: "workflowTemplate"
        };
    }

    rpc GetWorkflowTemplate (GetWorkflowTemplateRequest) returns (WorkflowTemplate) {
        option (google.api.http) = {
            get: "/apis/v1beta1/{namespace}/workflow_templates/{uid}"
            additional_bindings {
				get: "/apis/v1beta1/{namespace}/workflow_templates/{uid}/versions/{version}"
			}
        };
    }

    rpc ListWorkflowTemplateVersions (ListWorkflowTemplateVersionsRequest) returns (ListWorkflowTemplateVersionsResponse) {
        option (google.api.http) = {
            get: "/apis/v1beta1/{namespace}/workflow_templates/{uid}/versions"
        };
    }
}

message CreateWorkflowRequest {
    string namespace = 1;
    Workflow workflow = 2;
}

message Workflow {
    string uid = 1;
    string name = 2;

    repeated Parameter parameters = 3;

    WorkflowTemplate workflowTemplate = 4;
}

message Parameter {
    string name = 1;
    string value = 2;
}
