syntax = "proto3";

package api;

message CreateWorkflowTemplateRequest {
    string namespace = 1;
    WorkflowTemplate workflowTemplate = 2;
}

message UpdateWorkflowTemplateVersionRequest {
    string namespace = 1;
    WorkflowTemplate workflowTemplate = 2;
}

message GetWorkflowTemplateRequest {
    string namespace = 1;
    string uid = 2;
    int32 version = 3;
}

message CloneWorkflowTemplateRequest {
    string namespace = 1;
    string uid = 2;
    string name = 3;
    int32 version = 4;
}

message ListWorkflowTemplateVersionsRequest {
    string namespace = 1;
    string uid = 2;
}

message ListWorkflowTemplateVersionsResponse {
    int32 count = 1;
    repeated WorkflowTemplate workflowTemplates = 2;
}

message ListWorkflowTemplatesRequest {
    string namespace = 1;
}

message ListWorkflowTemplatesResponse {
    int32 count = 1;
    repeated WorkflowTemplate workflowTemplates = 2;
}

message ArchiveWorkflowTemplateRequest {
    string namespace = 1;
    string uid = 2;
}

message ArchiveWorkflowTemplateResponse {
    WorkflowTemplate workflowTemplate = 1;
}

message WorkflowExecutionStatisticReport {
    uint64 total = 1;
    string lastExecuted = 2;
    uint64 running = 3;
    uint64 completed = 4;
    uint64 failed = 5;
}

message WorkflowTemplate {
    string createdAt = 1;
    string uid = 2;
    string name = 3;
    int32 version = 4;
    string manifest = 5;
    bool isLatest = 6;
    bool isArchived = 7;
    WorkflowExecutionStatisticReport workflowExecutionStatisticReport = 8;
}